--- a/src/pages/Page404.module.css
+++ b/src/pages/Page404.module.css
@@ -1,10 +1,19 @@
 .error-text {
+  padding-top: 30px;
+
   display: flex;
+  flex-direction: column;
+  gap: 2rem;
   justify-content: center;
   align-items: center;
 }
 
 .span404 {
   font-size: 3.5rem;
+  color: var(--dark-red-color);
+}
+
+.home-link {
+  font-size: 2.5rem;
   color: var(--dark-red-color);
 }
