--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -4,7 +4,6 @@
 }
 
 .nav {
-  padding: 10px;
   font-size: 2.5rem;
 }
 
@@ -14,9 +13,9 @@
 }
 
 .nav-link {
-  transition: all 0.3s ease-in-out;
+  transition: color 0.2s ease-in-out;
 }
 
 .nav-link:hover {
-  text-shadow: 1px 1px 1px var(--text-color);
+  text-decoration: underline;
 }
