--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 :root {
   --mw: 1200px;
   --text-color: #333333;
+  --text-secondary-color: #201e3b;
   --bg-color: #44b76e;
   --fz: 10px;
   --dark-red-color: #b63d44;
@@ -35,4 +36,10 @@ ul {
   width: 100%;
   max-width: var(--mw);
   margin: 0 auto;
+  padding: 10px;
+}
+
+.active {
+  color: #fff;
+  text-decoration: underline;
 }
