--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -6,8 +6,12 @@
 .nav {
   font-size: 2.5rem;
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   align-items: center;
+}
+.nav-header {
+  margin-right: auto;
+  color: white;
 }
 
 .nav-list {
