--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -4,10 +4,11 @@
   max-width: 26rem;
   height: auto;
   padding-bottom: 20px;
+  padding-top: 20px;
 
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   gap: 1rem;
 
@@ -18,70 +19,8 @@
   box-shadow: 0px 0px 6px -1px rgba(34, 60, 80, 0.18);
 }
 
-.card-wrapper-list {
-  position: relative;
-  width: 100%;
-  height: fit-content;
-
-  display: flex;
-  gap: 2rem;
-
-  border-radius: 1.4rem;
-  overflow: hidden;
-  cursor: pointer;
-  transition: 0.2s;
-  box-shadow: 0px 0px 6px -1px rgba(34, 60, 80, 0.18);
-}
-
-.card-wrapper-table:hover,
-.card-wrapper-list:hover {
+.card-wrapper-table:hover {
   box-shadow: 0px 0px 26px -1px rgba(34, 60, 80, 0.18);
-}
-
-.card-wrapper-table .card-info {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 10px;
-}
-
-.card-wrapper-list .card-info {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  padding: 1rem;
-  gap: 0.6rem;
-}
-
-.card-wrapper-table .img {
-  width: 100%;
-  object-fit: cover;
-}
-
-.card-wrapper-table .second-img {
-  width: 100%;
-  object-fit: cover;
-  position: absolute;
-  top: 0;
-  left: 0;
-  opacity: 0;
-  transition: 0.5s;
-}
-
-.card-wrapper-list .second-img {
-  height: 18rem;
-  object-fit: cover;
-  position: absolute;
-  top: 0;
-  left: 0;
-  opacity: 0;
-  transition: 0.5s;
-}
-
-.second-img:hover {
-  opacity: 1;
 }
 
 .card-wrapper-table .title {
@@ -92,19 +31,14 @@
   text-align: center;
 }
 
-.card-wrapper-list .title {
-  height: auto;
-  padding: 0;
-  text-align: left;
-}
-
 .stock {
   font-size: 1.4rem;
 }
 
-.price {
-  font-size: 2rem;
-  font-weight: 700;
+.in-cart {
+  background-color: var(--white-color);
+  border: 3px solid var(--bg-color);
+  color: var(--bg-color);
 }
 
 @media screen and (max-width: 480px) {
